Adding updates for vanus ai and deploy
Adding updates for vanus ai and deploy